--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -1,3 +1,35 @@
+@font-face {
+    font-family: 'ARCADE';
+    src: url('../../vendor/ARCADE.ttf');
+}
+.spash-page{
+  -webkit-filter: blur(2px);
+  -moz-filter: blur(2px);
+  -o-filter: blur(2px);
+  -ms-filter: blur(2px);
+  filter: blur(2px);
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+}
+
 canvas{
-  transform: translateX(50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 2px;
+  background: rgba(235, 235, 235, 0.65);
+  border: 2px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 10px 2px black;
+}
+
+.background-container{
+  height: 100vh;
+  width: 100vw;
+  background-image: url("../bg.jpg");
+  background-size: cover;
 }
