Fixing Font download bug

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'ARCADE';
-    src: url('../../vendor/ARCADE.ttf');
+    src: url('../../vendor/arcade-font.ttf');
 }
 .spash-page{
   -webkit-filter: blur(2px);
