Updated Stylesheet to fix link colors in Safari

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -59,7 +59,7 @@ canvas{
   background-size: cover;
 }
 
-a:visited { text-decoration: none; color: black; }
+a:visited { text-decoration: none; color: black !important; }
 a:hover { text-decoration: none; color: black; }
 a:focus { text-decoration: none; color: black; }
 a:hover, a:active { text-decoration: none; color:#333333 }
